2009-04-26  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: Do not freecon strings duplicated with strdup.
	Also avoid allocation of memory.
	* src/passwd.c: Use SYSLOG instead of syslog.

2009-04-25  Miroslav Kure  <kurem@upcase.inf.upol.cz>

	* po/cs.po: Updated to 352T7f8u

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.h, lib/commonio.c: Added splint annotations.
	* lib/commonio.c: Do not assumes eptr is always notnull.

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, po/pt.po: Updated Portuguese translation.

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/copydir.c: Added splint annotations.
	* libmisc/copydir.c: Added assert to help splint.
	* libmisc/copydir.c: Free allocated structures in cas of failure.
	* libmisc/copydir.c: Avoid implicit conversion of pointers to
	booleans.
	* libmisc/copydir.c: Use buffers of size PATH_MAX instead of 1024
	for filenames.
	* libmisc/copydir.c: Use fchmod and fchown to change the mode of
	the opened file.
	* libmisc/copydir.c: Indicate the mode to open(), even if we chmod
	later.

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h: Added prototypes of getulong() and get_pid().
	* lib/prototypes.h: Added splint annotations.

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c: Use get_pid() instead of strtol.
	* lib/commonio.c: Replace an int by a size_t.

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.h: Added splint annotations.

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/sgroupio.c: Free allocated structures on failure.
	* lib/sgroupio.c: Added splint annotations.

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/Makefile.am, lib/get_pid.c, lib/getulong.c: Added get_pid()
	and getulong().

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>
